--- a/app/src/main/res/drawable/rndbutton.xml
+++ b/app/src/main/res/drawable/rndbutton.xml
@@ -3,8 +3,8 @@
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="100dip" />
-            <stroke android:width="1dip" android:color="#ffe41e" />
-            <gradient android:angle="-90" android:startColor="#ffe41e" android:endColor="#ffc50d"  />
+            <stroke android:width="1dip" android:color="#ffc50d" />
+            <gradient android:angle="-90" android:startColor="#ffc50d" android:endColor="#fcb93a"  />
         </shape>
     </item>
     <item android:state_focused="true">
