--- a/app/src/main/res/layout/activity_verifikasi.xml
+++ b/app/src/main/res/layout/activity_verifikasi.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="236dp"
+        android:layout_marginTop="252dp"
         android:background="@drawable/rndbutton"
         android:text="@string/masuk"
         android:typeface="normal"
@@ -60,8 +60,8 @@
         android:background="@drawable/border"
         android:ems="10"
         android:gravity="center"
+        android:hint="A1B2C3"
         android:inputType="textPersonName"
-        android:text="@string/a1b2c3"
         android:textColor="#202020"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,71 +70,12 @@
     <TextView
         android:id="@+id/textView5"
         android:layout_width="278dp"
-        android:layout_height="16dp"
+        android:layout_height="43dp"
         android:layout_marginStart="45dp"
         android:layout_marginLeft="45dp"
         android:layout_marginTop="201dp"
-        android:text="@string/dengan_menekan_tombol_masuk_anda_menyetujui"
         android:textColor="#202020"
-        android:textSize="12sp"
-        app:fontFamily="@font/rubik_regular"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="23dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="176dp"
-        android:layout_marginLeft="176dp"
-        android:layout_marginTop="216dp"
-        android:text="@string/dan"
-        android:textColor="#202020"
-        android:textSize="12sp"
-        app:fontFamily="@font/rubik_regular"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="28dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="292dp"
-        android:layout_marginLeft="292dp"
-        android:layout_marginTop="216dp"
-        android:text="@string/kami"
-        android:textColor="#202020"
-        android:textSize="12sp"
-        app:fontFamily="@font/rubik_regular"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="128dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginTop="216dp"
-        android:text="@string/ketentuan_pengguna"
-        android:textColor="#202020"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:fontFamily="@font/rubik_regular"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="91dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="200dp"
-        android:layout_marginLeft="200dp"
-        android:layout_marginTop="216dp"
-        android:text="@string/kebijakan_data"
-        android:textColor="#202020"
-        android:textSize="12sp"
-        android:textStyle="bold"
+        android:textSize="10sp"
         app:fontFamily="@font/rubik_regular"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
